victoriametrics/dev/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: victoriametrics
  namespace: guardian
  annotations:
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-name: "victoriametrics-dev"
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-spec: "slb.s1.small"
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-address-type: "intranet"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/instance: victoriametrics
    app.kubernetes.io/name: vmsingle
  ports:
    - name: http
      protocol: TCP
      port: 8429
      targetPort: 8429
